--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ requires-python = ">=3.12"
 dependencies = [
     "minsearch>=0.0.5",
     "openai>=1.108.2",
+    "pydantic>=2.12.3",
     "pydantic-ai==1.0.9",
     "python-dotenv>=1.1.1",
     "python-frontmatter>=1.1.0",
