--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,9 @@ dependencies = [
     "python-frontmatter>=1.1.0",
     "requests>=2.32.5",
     "streamlit>=1.50.0",
+    "arize-phoenix>=5.7.0",
+    "openinference-semantic-conventions>=0.1.11",
+    "opentelemetry-api>=1.29.0",
+    "opentelemetry-sdk>=1.29.0",
+    "pandas>=2.2.0",
 ]
-
